--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "livestreamapp",
+  "name": "app",
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron src/main",
+    "start": "electron src/main.js",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
@@ -12,17 +12,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@electron-forge/publisher-github": "^7.1.0",
+  "dependencies": {
     "electron": "^27.1.0",
+    "electron-store": "^8.1.0"
+  },
+  "devDependencies": {
     "electron-builder": "^24.6.4",
     "electron-reload": "^2.0.0-alpha.1"
-  },
-  "dependencies": {
-    "@microsoft/signalr": "^8.0.0",
-    "electron-store": "^8.1.0",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
   }
 }
